<resources>
    <string name="app_name">RFP</string>
    <string name="rfp">RFP</string>
    <string name="status">status</string>
    <string name="paired_devices">Paired Device</string>
    <string name="search">Search</string>
    <string name="send_data">Send data!</string>
    <string name="rf">작품연구회</string>
    <string name="dongyang_mirae_university">Dongyang Mirae University</string>
    <string name="settings">SETTINGS</string>
    <string name="copyright_2021_all_rights_reserved">Copyright 2021. 작품연구회 All Rights Reserved.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="paired">Paired</string>
    <string name="analyzer_performance">Analyzer Performance</string>
    <string name="dashboard">Dashboard</string>
    <string name="h_plane">H-Plane 측정</string>
    <string name="e_plane">E-Plane 측정</string>
    <string name="success">Success</string>
    <string name="main_setup_layout_text">측정 후 결과를 확인하실 수 있습니다.</string>
    <string name="kakao_app_key">dd78bc532a7d199ae94a28b0cd3acbc5</string>
</resources>