<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211c34"
    tools:context=".view.fragment.BlueToothFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipChildren="false">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/bluetooth_lottie"
                android:layout_width="325dp"
                android:layout_height="325dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_url="https://assets1.lottiefiles.com/datafiles/Ysd3LRRoCJn2LP3/data.json" />

            <ImageView
                android:id="@+id/bluetooth_imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="60dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <club.cred.synth.views.SynthButton
                android:id="@+id/send_btn"
                style="@style/Text.TitleStyle"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="10pt"
                app:layout_constraintEnd_toStartOf="@id/search_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bluetooth_imageview"
                app:neuButtonRadius="40dp"
                app:neuButtonType="elevated_soft"
                app:neuPlatformColor="#262238" />

            <club.cred.synth.views.SynthButton
                android:id="@+id/search_btn"
                style="@style/Text.TitleStyle"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="10pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bluetooth_imageview"
                app:neuButtonRadius="40dp"
                app:neuButtonType="elevated_soft"
                app:neuPlatformColor="#262238" />

            <club.cred.synth.views.SynthButton
                android:id="@+id/paired_btn"
                style="@style/Text.TitleStyle"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/paired"
                android:textColor="@color/white"
                android:textSize="10pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_btn"
                app:layout_constraintTop_toBottomOf="@id/bluetooth_imageview"
                app:neuButtonRadius="40dp"
                app:neuButtonType="elevated_soft"
                app:neuPlatformColor="#262238" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/bluetooth_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="50dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>